<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorPrimary">

    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/register_editText_nick" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:background="@drawable/drawable_round_edit_file"
            android:hint="@string/register_edit_text_nick_hint"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/register_editText_email" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_editText_nick"
            app:layout_constraintEnd_toEndOf="@+id/register_editText_nick"
            app:layout_constraintStart_toStartOf="@+id/register_editText_nick"
            android:background="@drawable/drawable_round_edit_file"
            android:hint="@string/register_edit_text_email_hint"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/register_edittext_password"
            app:layout_constraintStart_toStartOf="@+id/register_editText_email"
            app:layout_constraintEnd_toEndOf="@+id/register_editText_email" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_editText_email"
            android:hint="@string/register_edit_text_password_hint"
            android:background="@drawable/drawable_round_edit_file"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/register_edittext_confirm_password"
            android:hint="@string/register_edit_text_confirm_password_hint"
            app:layout_constraintEnd_toEndOf="@+id/register_edittext_password" app:layout_constraintStart_toStartOf="@+id/register_edittext_password"
            android:background="@drawable/drawable_round_edit_file" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_edittext_password"/>
    <Button
            android:text="@string/register_button_regisstre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_button_register" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_edittext_confirm_password"
            app:layout_constraintEnd_toEndOf="@+id/register_edittext_confirm_password"
            app:layout_constraintStart_toStartOf="@+id/register_edittext_confirm_password"
            android:background="@drawable/drawable_round_button"/>
    <TextView
            android:text="@string/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_textView_login" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/register_button_register" app:layout_constraintEnd_toEndOf="@+id/register_button_register"
            app:layout_constraintStart_toStartOf="@+id/register_button_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>