<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.login.LoginFragment"
                                                   android:background="@color/colorPrimary"
                                                   android:layout_centerVertical="true"
                                                   android:layout_gravity="center">
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/login_editText_email" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/login_hint_text_login"
            android:background="@drawable/drawable_round_edit_file"
            app:layout_constraintTop_toBottomOf="@+id/login_text_error"/>
    <EditText
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_editText_password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_editText_email"
            app:layout_constraintStart_toStartOf="@+id/login_editText_email"
            app:layout_constraintEnd_toEndOf="@+id/login_editText_email" android:hint="@string/login_hint_text_password"
            android:background="@drawable/drawable_round_edit_file"/>
    <TextView
            android:text="@string/login_text_view_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/login_textView_register"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button_login"
            app:layout_constraintEnd_toEndOf="@+id/login_editText_password"
            app:layout_constraintStart_toStartOf="@+id/login_editText_password"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/login_button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_button_login"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_editText_password"
            app:layout_constraintEnd_toEndOf="@+id/login_editText_password"
            app:layout_constraintStart_toStartOf="@+id/login_editText_password"
            android:background="@drawable/drawable_round_button"/>
    <TextView
            android:text="@string/login_error_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:id="@+id/login_text_error" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>